--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@
     --minor-font-color: #007EA7;
     --header-font-color: #FFFFFF;
     --misc-color: #003459;
+    --icon-color: white;
 }
 .centerCard {
     margin-left: 2rem;
@@ -25,6 +26,7 @@
     text-align: left;
     margin-bottom: 0;
 }
+
 .headerName{
     font-size: 65px;
     padding-left: 40px;
@@ -32,7 +34,12 @@
     font-family: 'Roboto', sans-serif; 
     text-align: left;
     page-break-after: always;
-    margin-bottom: 100%;
+    margin-bottom: 60%;
+}
+@media screen and (max-width: 480px) {
+    .headerName {
+        margin-bottom: 32rem;   
+    }
 }
 .background {
     background-color: var(--main-bg-color);
@@ -52,11 +59,15 @@
     animation-duration: 1.5s;
     animation-name: IconFlyIn;
     animation-fill-mode: forwards;
+    vertical-align: text-top;
     position: fixed;
 }
+.fab {
+    color:var(--icon-color)
+}
 @keyframes IconFlyIn{
-    0%   {color:transparent; left:0px;}
-    100%   {color:--misc-color; left:5%;}
+    0%   {color:transparent; left:-10px;}
+    100%   {color:var(--icon-color); left:5%;}
 }
 .cardFlyIn{
     position:relative;
@@ -66,7 +77,7 @@
 
 }
 
-@keyframes cardInLeft{
+@keyframes cardInRight{
     0%   {
         background-color:transparent; 
         color: transparent;
@@ -77,7 +88,7 @@
         Right:20%;}
 }
 
-@keyframes cardInRight{
+@keyframes cardInLeft {
     0%   {
         background-color:transparent; 
         color: transparent;
